--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,1 +1,146 @@
+---
+- summary: |
+   Проверка поиска товара по ключевому слову или категории
+  requirement: |
+   Пользователь должен иметь возможность искать товары по ключевому слову или категории.
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+    - Ключевое слово = Perfume
+    - категория = fragrances
+  steps:
+    - Вводим ключевое слово в строку "Поиск"
+    - Выбираем категорию fragrances из выпадающего списка
+  expected-result: |
+    На странице должны появиться все товары, имеющие ключевое слово "Perfume" и соответствующие категории "fragrances"
 
+- summary: |
+   Проверка поиска товара по несуществующему ключевому слову
+  requirement: |
+    Пользователь должен иметь возможность искать товары по ключевому слову.
+  prerequisites:
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+    Ключевое слово = яблоко
+  steps:
+    - Вводим ключевое слово в строку "Поиск"
+  expected-result: |
+    Пользователь должен увидеть надпись на странице "Ничего не найдено!"
+    
+- summary: |
+   Проверка поиска товара по фильтрам
+  requirement: |
+   Пользователь должен иметь возможность фильтровать товары
+  prerequisites:
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+    - Фильтр "Производитель" = Apple, Samsung, Oppo
+    - Фильтр наличия товаров = "В наличии"
+    - Фильтр "Цена" = от 0 до 1600
+  steps:
+    - Выбираем указанные фильтры в левом боковом меню
+  expected-result: |
+    Пользователь должен увидеть надпись на странице товары, соответствующие выбранным фильтрам
+    
+- summary: |
+    Проверка поиска товара с отрицательным значением цены
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites:
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+    Значение фильтра "Цена" = от -1700 до - 20
+  steps:
+    - Вводим в полее ввода "Цена" указанный диапазон
+  expected-result: |
+    Пользователь должен увидеть надпись на странице "Ничего не найдено!"
+    
+- summary: |
+    Проверка возможности просмотра информации о товаре
+  requirement: |
+    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
+  prerequisites: |
+    Открыта страница каталога с товарами
+  test-data: |
+  нет данных
+  steps:
+    - Нажать на карточку любого товара из каталога
+  expected-result: |
+    Пользователь должен попасть на страницу товара с его изображением, названием, рейтингом, ценой, описанием и категорией. 
+    
+- summary: |
+    Проверка возможности добавления товара в корзину и просмотра содержиого корзины. 
+  requirement: |
+   Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины.  
+  prerequisites: |
+    Открыта страница каталога с товарами, корзина с товарами пуста.
+  test-data: |
+  нет данных
+  steps:
+    - Нажать на конпу "В корзину" на карточке любого товара
+    - Нажать на кнопку "Корзина"
+  expected-result: |
+    Пользователь должен попасть на страницу корзины, в корзине должен появиться ранее добавленный товар. 
+    
+- summary: |
+    Проверка возможности добавления товара в корзину и просмотра содержиого корзины.
+  requirement: |
+   Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины. 
+  prerequisites: |
+    Открыта страница любого товара, корзина с товарами пуста. 
+  test-data: |
+  нет данных
+  steps:
+    - Нажать на конпу "В корзину" на странице товара
+    - Нажать на кнопку "Корзина"
+  expected-result: |
+    Пользователь должен попасть на страницу корзины, в корзине должен появиться ранее добавленный товар.
+    
+- summary: |
+    Проверка адаптивности сайта под мобильные устройства
+  requirement: |
+   Сайт должен иметь мобильную версию.
+  prerequisites: |
+    Открыть главную страницу сайта
+  test-data: |
+  нет данных
+  steps:
+    - Открыть главную страницу магазина https://hexlet-products-store.vercel.app
+    - Открыть инструмент DevTools
+    - Нажать на кнопку "Режим адаптивного дизайна"
+    - Выбрать устройство IPhone 12/13 Pro Max
+  expected-result: |
+    Внешний вид сайта адаптируется под разрешение экрана, сайтом по прежнему удобно пользоваться.
+    
+- summary: |
+    Проверка возможности просмотра сайта с различных устройств
+  requirement: |
+   Сайт должен быть доступен на различных устройствах
+  prerequisites: |
+    Открыта главнуая страница сайта
+  test-data: |
+  нет данных
+  steps:
+    - Открыть главную страницу магазина https://hexlet-products-store.vercel.app
+    - Открыть инструмент DevTools
+    - Нажать на кнопку "Режим адаптивного дизайна"
+    - Выбрать устройство IPad Pro (12.9-inch)
+  expected-result: |
+    Пользователь по-прежнему может зайти на сайт, увидеть всю информацию и может пользоваться сайтом. 
+    
+- summary: |
+    Проверка возможности отображения сайта в последниих версиях браузера
+  requirement: |
+   Сайт должен быть протестирован на совместимость с последними версиями браузеров.
+  prerequisites: |
+    Открыта главнуая страница сайта в последней версии браузера
+  test-data: |
+  - Mozila Firefox версия 113.0.2 (64-битная)
+  - Safari Версия 16.5 (18615.2.9.11.4)
+  - Chrome Версия 113.0.5672.126
+  - Opera Версия:99.0.4788.65 (arm64)
+  steps:
+    - Открыть главную страницу магазина https://hexlet-products-store.vercel.app
+  expected-result: |
+    Все элементы страницы должны отображаться в соотвесттвии с макетом, не дожны исчезать, менять свою ширину. Все кнопки должны нажиматься, выпадающие меню раскрываться, поля форм заполняться. 
+    
