--- a/test-cases.yml
+++ b/test-cases.yml
@@ -83,7 +83,7 @@
     Пользователь должен попасть на страницу корзины, в корзине должен появиться ранее добавленный товар. 
     
 - summary: |
-    Проверка возможности добавления товара в корзину и просмотра содержиого корзины.
+    Проверка возможности добавления товара в корзину со страницы товара и просмотра содержиого корзины.
   requirement: |
    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины. 
   prerequisites: |
@@ -103,7 +103,7 @@
   prerequisites: |
     Открыть главную страницу сайта
   test-data: |
-  нет данных
+  Браузер Google Chrome 113.0.5672.126
   steps:
     - Открыть главную страницу магазина https://hexlet-products-store.vercel.app
     - Открыть инструмент DevTools
@@ -119,12 +119,12 @@
   prerequisites: |
     Открыта главнуая страница сайта
   test-data: |
-  нет данных
+  Mozila Firefox версия 113.0.2 (64-битная)
   steps:
     - Открыть главную страницу магазина https://hexlet-products-store.vercel.app
     - Открыть инструмент DevTools
     - Нажать на кнопку "Режим адаптивного дизайна"
-    - Выбрать устройство IPad Pro (12.9-inch)
+    - Выбрать устройство IPad Pro (12.9-inch), Google Pixel 6P, Samsung Galaxy S 10/s10+
   expected-result: |
     Пользователь по-прежнему может зайти на сайт, увидеть всю информацию и может пользоваться сайтом. 
     
