--- a/requirements.yml
+++ b/requirements.yml
@@ -29,3 +29,4 @@ implicit:
   - при заполнении всех полей формы оформления заказа становится активной кнопка "Заказать"
   - при выборе способа оплаты "Картой оналайн на сайте" появляется форма ввода данных банковской карты с полями "номер карты", "срок действия карты", "Фамилия и имя держателя карты", "CVV код"
   - на сайте реализован протокол 3-D Secure для безопасной оплаты
+  - на сайте есть возможность отобразать товары по возрастанию цены, по убыванию цены, по рейтингу товара, по популярности товара, по размеру скидки
