--- a/requirements.yml
+++ b/requirements.yml
@@ -30,3 +30,4 @@ implicit:
   - при выборе способа оплаты "Картой оналайн на сайте" появляется форма ввода данных банковской карты с полями "номер карты", "срок действия карты", "Фамилия и имя держателя карты", "CVV код"
   - на сайте реализован протокол 3-D Secure для безопасной оплаты
   - на сайте есть возможность отобразать товары по возрастанию цены, по убыванию цены, по рейтингу товара, по популярности товара, по размеру скидки
+  - в поле ввода "Цена" нельзя вводить буквы и спецсимволы кроме "." и ","
