--- a/testing-report.yml
+++ b/testing-report.yml
@@ -12,8 +12,16 @@
   status: fail
   
 - summary: |
+  Проверка поиска товара по фильтру цены с учетом скидки
+  status: fail
+  
+- summary: |
    Проверка поиска товара с отрицательным значением цены
   status: pass
+  
+- summary: |
+   Проверка поиска товара со значением цены, включающим буквы и спецсимволы
+  status: fail
   
 - summary: |
    Проверка возможности просмотра информации о товаре
