--- a/test-cases.yml
+++ b/test-cases.yml
@@ -34,13 +34,28 @@
   prerequisites:
     Открыта главная страница сайта https://hexlet-products-store.vercel.app
   test-data: |
-    - Фильтр "Производитель" = Apple, Samsung, Oppo
+    - Фильтр "Производитель" = Microsoft, Impression of Acqua Di Gio
     - Фильтр наличия товаров = "В наличии"
     - Фильтр "Цена" = от 13 до 1499
   steps:
     - Выбираем указанные фильтры в левом боковом меню
   expected-result: |
-    Пользователь должен увидеть надпись на странице товары, соответствующие выбранным фильтрам
+    Пользователь должен увидеть на странице товары, соответствующие выбранным фильтрам с учетом границ значений цены.
+    
+- summary: |
+   Проверка поиска товара по фильтру цены с учетом скидки
+  requirement: |
+   Пользователь должен иметь возможность фильтровать товары
+  prerequisites:
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+    - Фильтр "Производитель" = Microsoft, Impression of Acqua Di Gio
+    - Фильтр наличия товаров = "В наличии"
+    - Фильтр "Цена" = от 11 до 1346
+  steps:
+    - Выбираем указанные фильтры в левом боковом меню
+  expected-result: |
+    Пользователь должен увидеть на странице товары, цена которых с учетом скидки входит в заданный диапазон.
     
 - summary: |
     Проверка поиска товара с отрицательным значением цены
@@ -54,6 +69,19 @@
     - Вводим в полее ввода "Цена" указанный диапазон
   expected-result: |
     Пользователь должен увидеть надпись на странице "Ничего не найдено!"
+    
+ - summary: |
+    Проверка поиска товара со значением цены, включающим буквы и спецсимволы
+  requirement: |
+    Пользователь должен иметь возможность фильтровать товары
+  prerequisites:
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+    Значение фильтра "Цена" = от "1345б" до "-9ав!"
+  steps:
+    - Вводим в полее ввода "Цена" указанный диапазон
+  expected-result: |
+    Пользователь должен увидеть надпись на странице "Ничего не найдено!" 
     
 - summary: |
     Проверка возможности просмотра информации о товаре
