--- a/test-cases.yml
+++ b/test-cases.yml
@@ -51,11 +51,11 @@
   test-data: |
     - Фильтр "Производитель" = Microsoft, Impression of Acqua Di Gio
     - Фильтр наличия товаров = "В наличии"
-    - Фильтр "Цена" = от 11 до 1346
+    - Фильтр "Цена" = от 12 до 1346
   steps:
     - Выбираем указанные фильтры в левом боковом меню
   expected-result: |
-    Пользователь должен увидеть на странице товары, цена которых с учетом скидки входит в заданный диапазон.
+    Пользователь не должен увидеть на странице товар, цена которого с учетом скидки составляет 11.91$, но должен увидеть товар, цена которого составляет 1345.65$ с учетом скидк.
     
 - summary: |
     Проверка поиска товара с отрицательным значением цены
