--- a/requirements.yml
+++ b/requirements.yml
@@ -31,3 +31,4 @@ implicit:
   - на сайте реализован протокол 3-D Secure для безопасной оплаты
   - на сайте есть возможность отобразать товары по возрастанию цены, по убыванию цены, по рейтингу товара, по популярности товара, по размеру скидки
   - в поле ввода "Цена" нельзя вводить буквы и спецсимволы кроме "." и ","
+  - при смене языка интерфейса и последующей перзегрузке страницы, язык интерфейса остается как при последнем выборе
