--- a/testing-report.yml
+++ b/testing-report.yml
@@ -41,7 +41,7 @@
   
 - summary: |
   Проверка возможности просмотра сайта с различных устройств
-  status: fail
+  status: Pass
   
 - summary: |
   Проверка возможности отображения сайта в последниих версиях браузера
