--- a/requirements.yml
+++ b/requirements.yml
@@ -32,3 +32,4 @@ implicit:
   - на сайте есть возможность отобразать товары по возрастанию цены, по убыванию цены, по рейтингу товара, по популярности товара, по размеру скидки
   - в поле ввода "Цена" нельзя вводить буквы и спецсимволы кроме "." и ","
   - при смене языка интерфейса и последующей перзегрузке страницы, язык интерфейса остается как при последнем выборе
+  - при обновалении страницы пользователь должен оставаться на той же странице
