--- a/bugreports.yml
+++ b/bugreports.yml
@@ -28,7 +28,7 @@
     На странице каталога товаров отображается товар со стоимостью 11.91$, но не отображается товар со стоимостью 1345.65$.
     
 - summary: |
-    Сайт отображает весь каталог товаров при вводе в поле "Цена" букв и спецсимволов
+   Можно вводить символы отличные от циферных в фильтре по цене
   environment: |
    Safari Версия 16.5 (18615.2.9.11.4)
    MacOS Ventura 13.4
