--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Фильтрация товаров по цене не учитывает границы значений
+    Фильтрация товаров по цене не учитывает границы диапазона
   environment: |
    Safari Версия 16.5 (18615.2.9.11.4)
    MacOS Ventura 13.4
