--- a/requirements.yml
+++ b/requirements.yml
@@ -33,3 +33,4 @@ implicit:
   - в поле ввода "Цена" нельзя вводить буквы и спецсимволы кроме "." и ","
   - при смене языка интерфейса и последующей перзегрузке страницы, язык интерфейса остается как при последнем выборе
   - при обновалении страницы пользователь должен оставаться на той же странице
+  - при возвращении со страницы товара на страницу каталога фильтры не должны сбрасываться, еслт они были ранее выбраны
