--- a/test-cases.yml
+++ b/test-cases.yml
@@ -12,8 +12,8 @@
     - Вводим ключевое слово в строку "Поиск"
     - Выбираем категорию fragrances из выпадающего списка
   expected-result: |
-    На странице должны появиться все товары, имеющие ключевое слово "Perfume" и соответствующие категории "fragrances". Кнопки "предыдущая" и "счледующая" не отображаются, если весь список товаров умещается на одной странице. 
-
+    На странице должны появиться все товары, имеющие ключевое слово "Perfume" и соответствующие категории "fragrances". 
+    
 - summary: |
    Проверка поиска товара по несуществующему ключевому слову
   requirement: |
