--- a/bugreports.yml
+++ b/bugreports.yml
@@ -34,7 +34,7 @@
    MacOS Ventura 13.4
   steps-to-reproduce: |
     1. Зайти на главную страницу магазина https://hexlet-products-store.vercel.app
-    2. В поле ввода "Цена" ввести значение от "1345б" до "-9ав!"
+    2. В поле ввода "Цена" ввести значение от "!абв" до "-9ав!"
   expected-result: |
    Пользователь должен увидеть сообщение "Ничего не найдено"
   actual-result: |
