--- a/bugreports.yml
+++ b/bugreports.yml
@@ -9,7 +9,7 @@
     2. Отфильтровать по производителю товаров "Microsoft" и "Impression of Acqua Di Gio"
     3. В поле ввода "Цена" ввести значения от "13" до "1499"
   expected-result: |
-    На странице каталога товаров должны появиться товары, цена которых укладывается в диапазон и учитывает границы значений "от 13 включительно до 1499 включительно".
+    На странице каталога товаров должны появиться 2 товара, цена которых укладывается в диапазон и учитывает границы значений "от 13 включительно до 1499 включительно".
   actual-result: |
     На странице каталога товаров отображается надпись "Ничего не найдено".
     
