--- a/requirements.yml
+++ b/requirements.yml
@@ -34,3 +34,4 @@ implicit:
   - при смене языка интерфейса и последующей перзегрузке страницы, язык интерфейса остается как при последнем выборе
   - при обновалении страницы пользователь должен оставаться на той же странице
   - при возвращении со страницы товара на страницу каталога фильтры не должны сбрасываться, еслт они были ранее выбраны
+  - в списке категорий товаров должна быть возможность выбрать пустое значение
