--- a/requirements.yml
+++ b/requirements.yml
@@ -35,3 +35,4 @@ implicit:
   - при обновалении страницы пользователь должен оставаться на той же странице
   - при возвращении со страницы товара на страницу каталога фильтры не должны сбрасываться, еслт они были ранее выбраны
   - в списке категорий товаров должна быть возможность выбрать пустое значение
+  - на странице корзины есть форма с полями "наименование товара", "артикул товара", "количество", "стоимость"
