--- a/about.yml
+++ b/about.yml
@@ -1,16 +1,14 @@
 ---
 # с помощью символа # создаются комментарии, чтобы что-то пояснить
-name: Ilona Maskova # ваше имя
-job: QA Engineer
-level: junior
-email: ilona@hexlet.io
+name: Vladimir Artemenko # ваше имя
+job: пока нет
+level:
+email: vladimirart2811@gmail.com
 description: |
-  Это текст-описание в свободной форме. Здесь можно рассказать пару интересных фактов про себя
+  Проработал 15 лет в МВД. Крайняя должность была "Ревизор КРО", 
+  занимался проверкой финансово-хозяйственной деятельности подразделений МВД на предмет правильности, обоснованности и эффективности бюджетных средств, а также
+  проверкой ведения ФХД в соответствии с требованиями законодательства и НПА.
 
   Текст может быть написан в несколько абзацев
 skills: # список навыков в виде списка, напишите что-то свое
-  - функциональное тестирование
-  - написание багрепортов
-  - Linux
-  - слепая печать
-  - английский язык C1
+  
