--- a/test-cases.yml
+++ b/test-cases.yml
@@ -55,7 +55,7 @@
   steps:
     - Выбираем указанные фильтры в левом боковом меню
   expected-result: |
-    Пользователь не должен увидеть на странице товар, цена которого с учетом скидки составляет 11.91$, но должен увидеть товар, цена которого составляет 1345.65$ с учетом скидк.
+    Пользователь не должен увидеть на странице товар, цена которого с учетом скидки составляет 11.91$, но должен увидеть товар, цена которого составляет 1345.65$ с учетом скидки.
     
 - summary: |
     Проверка поиска товара с отрицательным значением цены
