--- a/about.yml
+++ b/about.yml
@@ -5,9 +5,7 @@ job: пока нет
 level:
 email: vladimirart2811@gmail.com
 description: |
-  Проработал 15 лет в МВД. Крайняя должность была "Ревизор КРО", 
-  занимался проверкой финансово-хозяйственной деятельности подразделений МВД на предмет правильности, обоснованности и эффективности бюджетных средств, а также
-  проверкой ведения ФХД в соответствии с требованиями законодательства и НПА.
+  Проработал 15 лет в МВД. Крайняя должность была "Ревизор КРО", занимался проверкой финансово-хозяйственной деятельности подразделений МВД на предмет правильности, обоснованности и эффективности бюджетных средств, а также проверкой ведения ФХД в соответствии с требованиями законодательства и НПА.
 
   Текст может быть написан в несколько абзацев
 skills: # список навыков в виде списка, напишите что-то свое
