--- a/about.yml
+++ b/about.yml
@@ -9,4 +9,7 @@ description: |
 
   Текст может быть написан в несколько абзацев
 skills: # список навыков в виде списка, напишите что-то свое
-  
+  - настойчивость
+  - перфекционизм
+  - дотошность
+  - коммуникабельность
