--- a/requirements.yml
+++ b/requirements.yml
@@ -13,7 +13,7 @@ non-functional:
   - Сайт должен быть доступен на различных устройствах
 implicit:
   - пользователь должен иметь возможность зарегистрироваться на сайте как с помощью электронного адреса, так и с помощью учетной записи Google
-  - форма регистрации должна содержать следующие поля ввода: имя пользователя, номер телефона, адрес электронной почты, пароль, подтверждение пароля
+  - форма регистрации должна содержать следующие поля ввода "имя пользователя", "номер телефона", "адрес электронной почты", "пароль", "подтверждение пароля"
   - регистрация пользователя не должна осуществляться при хотябы одном незаполненном поле
   - имя пользователя при регистрации должно состоять от 3 до 20 символов
   - при попытке зарегистрировать пользователя с уже существующим именем появлеятся информационное сообщение "пользователь с таким именем уже существует"
@@ -24,7 +24,7 @@ implicit:
   - при нажатии на конкретный заказ появляется информация с номером заказа, составом заказа, общей суммой заказа, способом, временем и адресом доставки, а также способом оплаты
   - на странице заказа, если он еще не исполнен, есть возможность отменить заказ или перенести на другое время и день
   - при переходе в корзину и нажатии кнопки "оформить заказ" появляется форма оформления заказа
-  - форма оформления заказа содержит поля: Фамилия и имя получателя, номер телефона для связи, адрес доставки, два способа получения заказа самовывоз либо курьером, способ оплаты наличными при получении или картой онлайн на сайте
+  - форма оформления заказа содержит поля "Фамилия и имя получателя", "номер телефона для связи", "адрес доставки", "два способа получения заказа самовывоз либо курьером", "способ оплаты наличными при получении или картой онлайн на сайте"
   - при заполении формы оформления заказа происходит валидация всех полей на предмет корректности вводимых данных
   - при заполнении всех полей формы оформления заказа становится активной кнопка "Заказать"
   - при выборе способа оплаты "Картой оналайн на сайте" появляется форма ввода данных банковской карты с полями "номер карты", "срок действия карты", "Фамилия и имя держателя карты", "CVV код"
