--- a/about.yml
+++ b/about.yml
@@ -1,7 +1,7 @@
 ---
 name: Vladimir Artemenko # ваше имя
 job: пока нет
-level:
+level: нет
 email: vladimirart2811@gmail.com
 description: |
   Проработал 15 лет в МВД. Крайняя должность была "Ревизор КРО", занимался проверкой финансово-хозяйственной деятельности подразделений МВД на предмет правильности, обоснованности и эффективности бюджетных средств, а также проверкой ведения ФХД в соответствии с требованиями законодательства и НПА.
