--- a/testing-report.yml
+++ b/testing-report.yml
@@ -41,7 +41,7 @@
   
 - summary: |
     Проверка возможности просмотра сайта с различных устройств
-  status: Pass
+  status: pass
   
 - summary: |
     Проверка возможности отображения сайта в последниих версиях браузера
