--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,18 +1,29 @@
 ---
 - summary: |
-   Проверка поиска товара по ключевому слову или категории
+   Проверка поиска товара по ключевому слову
   requirement: |
-   Пользователь должен иметь возможность искать товары по ключевому слову или категории.
+   Пользователь должен иметь возможность искать товары по ключевому слову
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app
   test-data: |
     - Ключевое слово = Perfume
-    - категория = fragrances
   steps:
     - Вводим ключевое слово в строку "Поиск"
-    - Выбираем категорию fragrances из выпадающего списка
   expected-result: |
-    На странице должны появиться все товары, имеющие ключевое слово "Perfume" и соответствующие категории "fragrances". 
+    На странице отображаются товары в соотвествии с введенным ключевым словом.
+    
+- summary: |
+   Проверка поиска товара по категории
+  requirement: |
+   Пользователь должен иметь возможность искать товары по категории
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+    - категория = fragrances
+  steps:
+    - выбрать категорию из выпадающего списка
+  expected-result: |
+    На странице отображаются товары в соотвествии с выбранной категорией.    
     
 - summary: |
    Проверка поиска товара по несуществующему ключевому слову
@@ -21,21 +32,58 @@
   prerequisites:
     Открыта главная страница сайта https://hexlet-products-store.vercel.app
   test-data: |
-    Ключевое слово = яблоко
+    Ключевое слово = ывавыпыавп123!Флвыв
   steps:
     - Вводим ключевое слово в строку "Поиск"
   expected-result: |
     Пользователь должен увидеть надпись на странице "Ничего не найдено!"
     
 - summary: |
-   Проверка поиска товара по фильтрам
+   Проверка поиска товара по фильтру "Производитель"
   requirement: |
    Пользователь должен иметь возможность фильтровать товары
   prerequisites:
     Открыта главная страница сайта https://hexlet-products-store.vercel.app
   test-data: |
     - Фильтр "Производитель" = Microsoft, Impression of Acqua Di Gio
-    - Фильтр наличия товаров = "В наличии"
+  steps:
+    - Выбираем указанный фильтр в левом боковом меню
+  expected-result: |
+    Пользователь должен увидеть на странице товары, соответствующие выбранному фильтру
+    
+- summary: |
+   Проверка поиска товара с неактивным фильтром "В наличии"
+  requirement: |
+   Пользователь должен иметь возможность фильтровать товары
+  prerequisites:
+   -  Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+   фильтр товара = В наличии
+  steps:
+    - деактивировать фильтр "В наличии"
+  expected-result: |
+    Пользователь должен увидеть на странице все товары из каталога, в т.ч. которых нет в наличии на данный момент
+    
+- summary: |
+   Проверка поиска товара с активным фильтром "В наличии"
+  requirement: |
+   Пользователь должен иметь возможность фильтровать товары
+  prerequisites:
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+    - Фильтр товаров "В наличии"
+  steps:
+    - Выбираем указанные фильтры в левом боковом меню
+  expected-result: |
+    Пользователь должен увидеть на странице товары, соответствующие выбранным фильтрам.
+    
+- summary: |
+   Проверка учитываемости границ значений при поиске товара по цене
+  requirement: |
+   Пользователь должен иметь возможность фильтровать товары
+  prerequisites:
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
     - Фильтр "Цена" = от 13 до 1499
   steps:
     - Выбираем указанные фильтры в левом боковом меню
@@ -49,13 +97,11 @@
   prerequisites:
     Открыта главная страница сайта https://hexlet-products-store.vercel.app
   test-data: |
-    - Фильтр "Производитель" = Microsoft, Impression of Acqua Di Gio
-    - Фильтр наличия товаров = "В наличии"
     - Фильтр "Цена" = от 12 до 1346
   steps:
     - Выбираем указанные фильтры в левом боковом меню
   expected-result: |
-    Пользователь не должен увидеть на странице товар, цена которого с учетом скидки составляет 11.91$, но должен увидеть товар, цена которого составляет 1345.65$ с учетом скидки.
+    Отображаются товары в соответвии с выбранным диапазоном в том числе товары со скидкой
     
 - summary: |
     Проверка поиска товара с отрицательным значением цены
@@ -94,7 +140,7 @@
   steps:
     - Нажать на карточку любого товара из каталога
   expected-result: |
-    Пользователь должен попасть на страницу товара с его изображением, названием, рейтингом, ценой, описанием и категорией. 
+    Отображается карточка товара с подробным описанием 
     
 - summary: |
     Проверка возможности добавления товара в корзину и просмотра содержиого корзины. 
