--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,6 +1,10 @@
 ---
 - summary: |
-   Проверка поиска товара по ключевому слову или категории
+   Проверка поиска товара по ключевому слову
+  status: pass
+  
+- summary: |
+   Проверка поиска товара по категории
   status: pass
 
 - summary: |
@@ -8,12 +12,24 @@
   status: pass
   
 - summary: |
-    Проверка поиска товара по фильтрам
+   Проверка поиска товара по фильтру "Производитель"
+  status: pass
+  
+- summary: |
+   Проверка поиска товара с неактивным фильтром "В наличии"
   status: fail
   
 - summary: |
+   Проверка поиска товара с активным фильтром "В наличии"
+  status: pass
+  
+- summary: |
+   Проверка учитываемости границ значений при поиске товара по цене
+  status: fail 
+  
+- summary: |
     Проверка поиска товара по фильтру цены с учетом скидки
-  status: fail
+  status: pass
   
 - summary: |
     Проверка поиска товара с отрицательным значением цены
