--- a/test-cases.yml
+++ b/test-cases.yml
@@ -78,7 +78,7 @@
     Пользователь должен увидеть на странице товары, соответствующие выбранным фильтрам.
     
 - summary: |
-   Проверка учитываемости границ значений при поиске товара по цене
+   Проверка учитываемости границ диапазона при поиске товара по цене
   requirement: |
    Пользователь должен иметь возможность фильтровать товары
   prerequisites:
