--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,31 +1,27 @@
 ---
 - summary: |
+    Не работае поиск товара при неактивном фильтре "В наличии"
+  environment: |
+   Safari Версия 16.5 (18615.2.9.11.4)
+   MacOS Ventura 13.4
+  steps-to-reproduce: |
+    1. Деактивировать фильтр "В начличии"
+  expected-result: |
+    Пользователь должен увидеть на странице все товары из каталога, в т.ч. которых нет в наличии на данный момент
+  actual-result: |
+    На странице каталога товаров отображается надпись "Ничего не найдено".
+
+- summary: |
     Фильтрация товаров по цене не учитывает границы диапазона
   environment: |
    Safari Версия 16.5 (18615.2.9.11.4)
    MacOS Ventura 13.4
   steps-to-reproduce: |
-    1. Зайти на главную страницу магазина https://hexlet-products-store.vercel.app
-    2. Отфильтровать по производителю товаров "Microsoft" и "Impression of Acqua Di Gio"
-    3. В поле ввода "Цена" ввести значения от "13" до "1499"
+    В поле ввода "Цена" ввести значения от "13" до "1499"
   expected-result: |
-    На странице каталога товаров должны появиться 2 товара, цена которых укладывается в диапазон и учитывает границы значений "от 13 включительно до 1499 включительно".
+   Пользователь должен увидеть на странице товары, соответствующие выбранным фильтрам с учетом границ значений цены.
   actual-result: |
-    На странице каталога товаров отображается надпись "Ничего не найдено".
-    
-- summary: |
-    Фильтрация товаров по цене не учитывает цену со скидкой
-  environment: |
-   Safari Версия 16.5 (18615.2.9.11.4)
-   MacOS Ventura 13.4
-  steps-to-reproduce: |
-    1. Зайти на главную страницу магазина https://hexlet-products-store.vercel.app
-    2. Отфильтровать по производителю товаров "Microsoft" и "Impression of Acqua Di Gio"
-    3. В поле ввода "Цена" ввести значения от "12" до "1346"
-  expected-result: |
-    Пользователь не должен увидеть на странице товар, цена которого с учетом скидки составляет 11.91$, но должен увидеть товар, цена которого составляет 1345.65$ с учетом скидки.
-  actual-result: |
-    На странице каталога товаров отображается товар со стоимостью 11.91$, но не отображается товар со стоимостью 1345.65$.
+    На странице каталога товаров не отображаются товары, включающие крайние ценовые значения диапазона.
     
 - summary: |
    Можно вводить символы отличные от циферных в фильтре по цене
@@ -33,8 +29,7 @@
    Safari Версия 16.5 (18615.2.9.11.4)
    MacOS Ventura 13.4
   steps-to-reproduce: |
-    1. Зайти на главную страницу магазина https://hexlet-products-store.vercel.app
-    2. В поле ввода "Цена" ввести значение от "!абв" до "-9ав!"
+   В поле ввода "Цена" ввести значение от "!абв" до "-9ав!"
   expected-result: |
    Пользователь должен увидеть сообщение "Ничего не найдено"
   actual-result: |
@@ -46,10 +41,9 @@
     Mozila Firefox версия 113.0.2 (64-битная)
     MacOS Ventura 13.4
   steps-to-reproduce: |
-    1. Зайти на главную страницу магазина https://hexlet-products-store.vercel.app
-    2. Открыть инструмент Dev Tools
-    3. выбрать режим "адаптивного дизайна"
-    4. Выбрать Тестируемое устройство IPhone 12/13 Pro Max
+    1. Открыть инструмент Dev Tools
+    2. выбрать режим "адаптивного дизайна"
+    3. Выбрать Тестируемое устройство IPhone 12/13 Pro Max
   expected-result: |
    Внешний вид сайта адаптируется под разрешение экрана, ширина кнопок и текста не меняется, текст не выходит за границы полей, сайтом по прежнему удобно пользоваться.
   actual-result: |
