--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,7 +1,11 @@
 ---
 test-cases:
   - summary: |
-     Проверка поиска товара по ключевому слову или категории
+     Проверка поиска товара по ключевому слову
+    status: pass
+    
+  - summary: |
+     Проверка поиска товара по категории
     status: pass
 
   - summary: |
@@ -9,12 +13,24 @@ test-cases:
     status: fail
     
   - summary: |
-     Проверка поиска товара по фильтрам
+     Проверка поиска товара по фильтру "Производитель"
+    status: pass
+    
+  - summary: |
+     Проверка поиска товара с неактивным фильтром "В наличии"
+    status: pass
+    
+  - summary: |
+     Проверка поиска товара с активным фильтром "В наличии"
+    status: pass
+    
+  - summary: |
+     Проверка учитываемости границ значений при поиске товара по цене
     status: fail
   
   - summary: |
      Проверка поиска товара по фильтру цены с учетом скидки
-    status: fail
+    status: pass
   
   - summary: |
      Проверка поиска товара с отрицательным значением цены
@@ -55,8 +71,7 @@ bugreports:
       Mozila Firefox версия 113.0.2 (64-битная)
       MacOS Ventura 13.4
     steps-to-reproduce: |
-      1. Зайти на главную страницу магазина https://hexlet-products-store.vercel.app
-      2. В поле ввода "Поиск" ввести буквы "фывапр"
+      В поле ввода "Поиск" ввести буквы "ывавыпыавп123!Флвыв"
     expected-result: |
       Пользователь должен увидеть надпись на странице "Ничего не найдено!"
     actual-result: |
@@ -68,8 +83,7 @@ bugreports:
       Safari Версия 16.5 (18615.2.9.11.4)
       MacOS Ventura 13.4
     steps-to-reproduce: |
-      1. Зайти на главную страницу магазина https://hexlet-products-store.vercel.app
-      2. В поле ввода "Цена" ввести значения от "10000"
+      В поле ввода "Цена" ввести значения от "10000"
     expected-result: |
       На странице каталога товаров должна появиться надпись "Ничего не найдено", т.к. в каталоге нет товаров, стоимость которых составляет от 10000
     actual-result: |
@@ -81,8 +95,7 @@ bugreports:
       Safari Версия 16.5 (18615.2.9.11.4)
       MacOS Ventura 13.4
     steps-to-reproduce: |
-      1. Зайти на главную страницу магазина https://hexlet-products-store.vercel.app
-      2. В поле ввода "Цена" ввести значения от "-100" до "-2"
+      В поле ввода "Цена" ввести значения от "-100" до "-2"
     expected-result: |
       На странице каталога товаров должна появиться надпись "Ничего не найдено"
     actual-result: |
