--- a/test-cases.yml
+++ b/test-cases.yml
@@ -39,7 +39,7 @@
     Пользователь должен увидеть надпись на странице "Ничего не найдено!"
     
 - summary: |
-   Проверка поиска товара по фильтру "Производитель"
+   Проверка фильтра по бренду
   requirement: |
    Пользователь должен иметь возможность фильтровать товары
   prerequisites:
@@ -49,10 +49,10 @@
   steps:
     - Выбираем указанный фильтр в левом боковом меню
   expected-result: |
-    Пользователь должен увидеть на странице товары, соответствующие выбранному фильтру
+    Отображаются товары выбранного бренда
     
 - summary: |
-   Проверка поиска товара с неактивным фильтром "В наличии"
+   Проверка неактивного фильтра наличия товаров
   requirement: |
    Пользователь должен иметь возможность фильтровать товары
   prerequisites:
@@ -62,10 +62,10 @@
   steps:
     - деактивировать фильтр "В наличии"
   expected-result: |
-    Пользователь должен увидеть на странице все товары из каталога, в т.ч. которых нет в наличии на данный момент
+   Отображаются все товары без исключения
     
 - summary: |
-   Проверка поиска товара с активным фильтром "В наличии"
+   Проверка активного фильтра наличия товаров
   requirement: |
    Пользователь должен иметь возможность фильтровать товары
   prerequisites:
@@ -73,31 +73,18 @@
   test-data: |
     - Фильтр товаров "В наличии"
   steps:
-    - Выбираем указанные фильтры в левом боковом меню
+    - Активируем указанный фильтр 
   expected-result: |
-    Пользователь должен увидеть на странице товары, соответствующие выбранным фильтрам.
+   Отображаются только товары в наличии
     
 - summary: |
-   Проверка учитываемости границ диапазона при поиске товара по цене
+   Проверка фильтра по цене
   requirement: |
    Пользователь должен иметь возможность фильтровать товары
   prerequisites:
     Открыта главная страница сайта https://hexlet-products-store.vercel.app
   test-data: |
     - Фильтр "Цена" = от 13 до 1499
-  steps:
-    - Выбираем указанные фильтры в левом боковом меню
-  expected-result: |
-    Пользователь должен увидеть на странице товары, соответствующие выбранным фильтрам с учетом границ значений цены.
-    
-- summary: |
-   Проверка поиска товара по фильтру цены с учетом скидки
-  requirement: |
-   Пользователь должен иметь возможность фильтровать товары
-  prerequisites:
-    Открыта главная страница сайта https://hexlet-products-store.vercel.app
-  test-data: |
-    - Фильтр "Цена" = от 12 до 1346
   steps:
     - Выбираем указанные фильтры в левом боковом меню
   expected-result: |
@@ -143,7 +130,7 @@
     Отображается карточка товара с подробным описанием 
     
 - summary: |
-    Проверка возможности добавления товара в корзину и просмотра содержиого корзины. 
+    Проверка добавления товара в корзину
   requirement: |
    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины.  
   prerequisites: |
@@ -154,10 +141,10 @@
     - Нажать на конпу "В корзину" на карточке любого товара
     - Нажать на кнопку "Корзина"
   expected-result: |
-    Пользователь должен попасть на страницу корзины, в корзине должен появиться ранее добавленный товар. 
+    Товар добавлен в корзину 
     
 - summary: |
-    Проверка возможности добавления товара в корзину со страницы товара и просмотра содержиого корзины.
+    Проверка добавления товара в корзину с карточки товара
   requirement: |
    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины. 
   prerequisites: |
@@ -165,10 +152,10 @@
   test-data: |
     нет данных
   steps:
-    - Нажать на конпу "В корзину" на странице товара
+    - Нажать на конпу "В корзину" в карточке товара
     - Нажать на кнопку "Корзина"
   expected-result: |
-    Пользователь должен попасть на страницу корзины, в корзине должен появиться ранее добавленный товар.
+    Товар добавлен в корзину
     
 - summary: |
     Проверка адаптивности сайта под мобильные устройства
