--- a/testing-report.yml
+++ b/testing-report.yml
@@ -12,24 +12,20 @@
   status: pass
   
 - summary: |
-   Проверка поиска товара по фильтру "Производитель"
+   Проверка фильтра по бренду
   status: pass
   
 - summary: |
-   Проверка поиска товара с неактивным фильтром "В наличии"
+   Проверка неактивного фильтра наличия товаров
   status: fail
   
 - summary: |
-   Проверка поиска товара с активным фильтром "В наличии"
+  Проверка активного фильтра наличия товаров
   status: pass
   
 - summary: |
-   Проверка учитываемости границ значений при поиске товара по цене
+   Проверка фильтра по цене
   status: fail 
-  
-- summary: |
-    Проверка поиска товара по фильтру цены с учетом скидки
-  status: pass
   
 - summary: |
     Проверка поиска товара с отрицательным значением цены
@@ -44,11 +40,11 @@
   status: pass
   
 - summary: |
-    Проверка возможности добавления товара в корзину и просмотра содержиого корзины. 
+    Проверка добавления товара в корзину
   status: pass
   
 - summary: |
-    Проверка возможности добавления товара в корзину со страницы товара и просмотра содержиого корзины. 
+    Проверка добавления товара в корзину с карточки товара
   status: pass
   
 - summary: |
