--- a/bugreports.yml
+++ b/bugreports.yml
@@ -5,7 +5,7 @@
    Safari Версия 16.5 (18615.2.9.11.4)
    MacOS Ventura 13.4
   steps-to-reproduce: |
-    1. Деактивировать фильтр "В начличии"
+    1. Деактивировать фильтр "В наличии"
   expected-result: |
     Пользователь должен увидеть на странице все товары из каталога, в т.ч. которых нет в наличии на данный момент
   actual-result: |
@@ -19,7 +19,7 @@
   steps-to-reproduce: |
     В поле ввода "Цена" ввести значения от "13" до "1499"
   expected-result: |
-   Пользователь должен увидеть на странице товары, соответствующие выбранным фильтрам с учетом границ значений цены.
+    Отображаются товары в соответвии с выбранным диапазоном в том числе товары со скидкой
   actual-result: |
     На странице каталога товаров не отображаются товары, включающие крайние ценовые значения диапазона.
     
