--- a/regress-report.yml
+++ b/regress-report.yml
@@ -13,24 +13,20 @@ test-cases:
     status: fail
     
   - summary: |
-     Проверка поиска товара по фильтру "Производитель"
+     Проверка фильра по бренду
     status: pass
     
   - summary: |
-     Проверка поиска товара с неактивным фильтром "В наличии"
+     Проверка неактивного фильтра наличия товаров
     status: pass
     
   - summary: |
-     Проверка поиска товара с активным фильтром "В наличии"
+    Проверка активного фильтра наличия товаров
     status: pass
     
   - summary: |
-     Проверка учитываемости границ значений при поиске товара по цене
+      Проверка фильтра по цене
     status: fail
-  
-  - summary: |
-     Проверка поиска товара по фильтру цены с учетом скидки
-    status: pass
   
   - summary: |
      Проверка поиска товара с отрицательным значением цены
@@ -45,11 +41,11 @@ test-cases:
     status: pass
   
   - summary: |
-     Проверка возможности добавления товара в корзину и просмотра содержиого корзины. 
+     Проверка добавления товара в корзину
     status: pass
   
   - summary: |
-     Проверка возможности добавления товара в корзину со страницы товара и просмотра содержиого корзины. 
+     Проверка добавления товара в корзину с карточки товара
     status: pass
   
   - summary: |
@@ -73,7 +69,7 @@ bugreports:
     steps-to-reproduce: |
       В поле ввода "Поиск" ввести буквы "ывавыпыавп123!Флвыв"
     expected-result: |
-      Пользователь должен увидеть надпись на странице "Ничего не найдено!"
+      Надпись на странице "Ничего не найдено!"
     actual-result: |
       На странице отображается весь каталог товаров
       
